adjust margin bot on btn when hovering to avoid jump effect

--- a/src/assets/scss/buttons.scss
+++ b/src/assets/scss/buttons.scss
@@ -12,7 +12,7 @@
     @include transition(all 0.15s linear);
     box-shadow: 0 8px darken(darkgrey, 10%);
     margin-top: 0;
-    margin-bottom: 4px;
+    margin-bottom: 14px;
   }
 
   &:focus {
